# sem_7_info_sec

./: BinMatrix.cpp  BinMatrix.h  CMakeLists.txt  Matrix.hpp  decoder.h  decrypt.cpp  encrypt.cpp  key_gen.cpp  mceliece.cpp  mceliece.h  min_sum_decoder.cpp  min_sum_decoder.hpp  qc_mdpc.cpp  qc_mdpc.h
goppa/: CMakeLists.txt
goppa/include/: Euclidean.h  GF.h  goppa.h
goppa/run/: decrypt.cpp  encrypt.cpp  key_gen.cpp
goppa/src/: Euclidean.cpp  GF.cpp  goppa.cpp
mdpc/: CMakeLists.txt
mdpc/include/: channel.h  decoder.h  mceliece.h  mceliece_min_sum.h  min_sum_decoder.hpp  msg_generator.h  qc_mdpc.h
mdpc/run/: ber_estimation.cpp  decrypt.cpp  decrypt_estimation.cpp  encrypt.cpp  key_gen.cpp
mdpc/scripts/: ber.sh  ber_est.ipynb  helper-key-gen.sh  helper-snr-ber.sh  key-gen.py  snr-ber.py
mdpc/src/: BinMatrix.cpp  channel.cpp  mceliece.cpp  mceliece_min_sum.cpp  min_sum_decoder.cpp  msg_generator.cpp  qc_mdpc.cpp
